# dingbot

./: README.md  pyproject.toml
backend/: __init__.py  config.env.example  main.py
backend/src/api/v2/: __init__.py  router.py
backend/src/api/v2/endpoints/: __init__.py  inspection.py  llm_config.py  mcp.py  mcp_config.py  mcp_config_current.py  mcp_config_update.py
backend/src/dingtalk/: bot.py
backend/src/llm/: config.py  config_manager.py  processor.py
backend/src/llm/security/: __init__.py  config.py  mapping.py  masker.py  rules.py  surname_dict.py
backend/src/mcp/: __init__.py  config.py  config_manager.py  enhanced_client.py  types.py
backend/src/utils/: error_handler.py  monitoring.py
backend/tests/: test_config_manager.py
frontend/: index.html  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/assets/css/: main.css
frontend/src/components/: ChatHistory.vue  LLMConfigFileEditor.vue  MCPConfigEditor.vue  MessageSearch.vue  StreamChat.vue
frontend/src/router/: index.js
frontend/src/stores/: chat.js
frontend/src/utils/: katex.js  markdown.js  storage.js
frontend/src/views/: Chat.vue  Dashboard.vue  MCPConfig.vue  Settings.vue
k8s-mcp/: POETRY_GUIDE.md  POETRY_MIGRATION.md  README.md  config.env.example  demo_deployment_tools.py  demo_llm_deployment.py  kubegraph.md  llm_config.example.env  pyproject.toml  run.py  start_k8s_mcp_http_server.py
k8s-mcp/project_document/: api-usage-guide.md  configuration-guide.md  deployment-guide.md  troubleshooting-guide.md
k8s-mcp/scripts/: dev.sh  start.sh
k8s-mcp/src/k8s_mcp/: __init__.py  config.py  k8s_client.py  server.py
k8s-mcp/src/k8s_mcp/core/: __init__.py  cluster_sync.py  k8s_graph.py  mcp_protocol.py  metrics_collector.py  monitoring_middleware.py  relation_query_handler.py  summary_generator.py  tool_registry.py
k8s-mcp/src/k8s_mcp/llm/: ollama_adapter.py
k8s-mcp/src/k8s_mcp/tools/: __init__.py  k8s_cluster_summary.py  k8s_create_deployment.py  k8s_create_service.py  k8s_describe_pod.py  k8s_generate_deployment_yaml.py  k8s_get_cluster_metrics.py  k8s_get_deployment_history.py  k8s_get_deployments.py  k8s_get_endpoints.py  k8s_get_events.py  k8s_get_logs.py  k8s_get_nodes.py  k8s_get_pods.py  k8s_get_services.py  k8s_llm_generate_deployment.py  k8s_patch_deployment.py  k8s_patch_service.py  k8s_relation_query.py  k8s_restart_deployment.py  k8s_rollback_deployment.py  k8s_scale_deployment.py  k8s_update_service.py
k8s-mcp/tests/: test_cluster_sync.py  test_k8s_cluster_summary_tool.py  test_k8s_graph.py  test_k8s_relation_query_tool.py  test_monitoring.py  test_relation_query_handler.py  test_server_integration.py  test_summary_generator.py
project_document/: README.md  api-documentation.md  cluster-resource-monitoring-guide.md  k8s-mcp-label-selector-support.md  llm-config-migration-guide.md  llm-data-masking-implementation-status.md  mcp-auto-sync-guide.md  mcp-compatibility-analysis.md  mcp-config-guide.md  mcp-protocol-support.md  mcp-result-optimization-guide.md  ops-inspection-feature.md  secret.md  技术架构与配置指南.md  项目总览与最新状态.md
project_document/architecture-diagrams/: architecture.excalidraw  llm2mcp-masking-flow.excalidraw  mcp-communication-flow.excalidraw
scripts/: __init__.py  build.py  cleanup.sh  cleanup_mcp_backups.py  dev.py  migrate_llm_config.py  serve.py  setup.py
